--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 on:
   push:
+name: CI
+on:
+  push:
   pull_request:
   schedule:
     - cron: '0 8 * * 6'
@@ -9,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: sudo apt-get update -y
-      - run: >-
+      - run: >
           sudo apt-get install -y
           texlive-latex-extra
           texlive-fonts-recommended
@@ -19,4 +22,11 @@ jobs:
           texlive-xetex
           latexmk
       - uses: actions/checkout@v2
+      - name: Download Figtree fonts
+        run: |
+          mkdir -p fonts
+          wget -P fonts https://raw.githubusercontent.com/erikdkennedy/figtree/master/fonts/ttf/Figtree-Regular.ttf
+          wget -P fonts https://raw.githubusercontent.com/erikdkennedy/figtree/master/fonts/ttf/Figtree-Italic.ttf
+          wget -P fonts https://raw.githubusercontent.com/erikdkennedy/figtree/master/fonts/ttf/Figtree-Bold.ttf
+          wget -P fonts https://raw.githubusercontent.com/erikdkennedy/figtree/master/fonts/ttf/Figtree-BoldItalic.ttf
       - run: make poster.pdf
