--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,8 @@ jobs:
           sudo fc-cache -f -v
       - uses: actions/checkout@v2
       - run: make poster.pdf
+      - name: Upload poster
+        uses: actions/upload-artifact@v4
+        with:
+          name: poster.pdf
+          path: poster.pdf
